# temperature_sensor

./: .gitmodules  CMakeLists.txt
cmake/: project_options.cmake  project_warnings.cmake  stm32_utils.cmake
linker/: memory.ld  stm32f446ze.ld
src/: CMakeLists.txt  main_stm32.cc
